<resources>
    <string name="app_name">课程管理系统</string>
    <string name="第一节">08:00  — 09:40 </string>
    <string name="第二节">10:00  — 11:40 </string>
    <string name="第三节">14:10  — 15:50 </string>
    <string name="第四节">16:10  — 17:50 </string>
    <string name="第五节">18:40  — 20:20 </string>
    <string name="第六节">20:30  — 20:10 </string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>

</resources>