<?xml version="1.0" encoding="utf-8"?>
<!--模仿课程表的界面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7F7F7"
    tools:context=".student.schedule.Schedule">

    <!--选择时间-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--下拉方式选学年-->
        <Spinner
            android:id="@+id/switchYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#004684"
            />
        <!--下拉方式选学期-->
        <Spinner
            android:id="@+id/switchTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#004684"
            />
        <!--下拉方式选周数-->
        <Spinner
            android:id="@+id/switchWeek"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!--分隔线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#004684"/>

    <!--显示星期-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:text="@string/mon"
            android:textSize="13dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textSize="13dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textSize="13dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textSize="13dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textSize="13dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textSize="13dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textSize="13dp"
            android:gravity="center"/>
    </LinearLayout>


    <!--显示课表详细信息-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--显示多少节课-->
            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:text="@string/第一节"
                    android:textSize="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:textSize="10dp"
                    android:text="@string/第二节"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:textSize="10dp"
                    android:text="@string/第三节"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:textSize="10dp"
                    android:text="@string/第四节"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:textSize="10dp"
                    android:text="@string/第五节"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:textSize="10dp"
                    android:text="@string/第六节"
                    android:gravity="center"/>
            </LinearLayout>

            <GridView
                android:id="@+id/courceDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="7"
                android:horizontalSpacing="1dp"
                android:verticalSpacing="1dp"
                android:stretchMode="columnWidth"
                android:background="#E5E5E5">
            </GridView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>