<?xml version="1.0" encoding="utf-8"?><!--模仿课程表的界面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Schedule">

    <!--选择时间-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <View
            android:id="@+id/switchYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:background="#004684" />

        <!--下拉方式选周数-->
        <Spinner
            android:id="@+id/switchTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:background="#004684" />
        <View
            android:id="@+id/switchWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <!--分隔线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@drawable/background_gradient_from_top_to_bottom" />

    <!--显示星期-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textSize="13dp" />
    </LinearLayout>


    <!--显示课表详细信息-->
    <ScrollView
        android:id="@+id/scroll_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!--显示多少节课-->
            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:gravity="center"
                    android:text="@string/第一节"
                    android:textSize="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FAFAFA" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:gravity="center"
                    android:text="@string/第二节"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:gravity="center"
                    android:text="@string/第三节"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:gravity="center"
                    android:text="@string/第四节"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:gravity="center"
                    android:text="@string/第五节"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="92dp"
                    android:gravity="center"
                    android:text="@string/第六节"
                    android:textSize="10dp" />
            </LinearLayout>


<!--            <GridView-->
<!--                android:id="@+id/courceDetail"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:horizontalSpacing="1dp"-->
<!--                android:numColumns="7"-->
<!--                android:stretchMode="columnWidth"-->
<!--                android:verticalSpacing="1dp"></GridView>-->

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>